sass/screen.scss
@import "compass/reset";
@import "compass";

$green: #78b814;
$light-green: mix($green, #FFF);
$even-lighter-green: mix($green, #FFF, 30%);
$dark-green: mix($green, #000, 70%);
$even-darker-green: mix($green, #000);
$red: #b83314;
$yellow: #cfd12b;
$white-kinda: #FFF;
//$noise: url("http://noisepng.com/64-90-4.png");
$noise: image-url("noise.png");

body {
    background-image: image-url("bg.png");
    background-color: $green;
    background-position: top center;
    color: $white-kinda;
    font-family: "Droid Sans", sans-serif;
    padding: 48px;
    padding-top: 0;
}

a {
    color: $even-darker-green;
    text-decoration: none;
    
    &.spec {
        &:after {
            content: " ›";
            color: rgba(#88875F, 0.5);
            text-transform: uppercase;
            font-size: 75%;
            @include text-shadow(none);
        }
        
        &:hover:after {
            content: "   Spec ›";
        }
    }
}

#wrapper {
    @include clearfix;
    
    & > header {
        text-align: center;
        margin-bottom: 1em;
    }
}

@import "partials/header";

p.info {
    text-align: center;
}

.group {
    width: 30%;
    @include float(left);
    padding: 0 1.5%;
    margin-bottom: 2em;
    
    &:nth-child(4) {
        clear: left;
    }
    
    h1 {
        margin: 0 -5px;
        padding: 32px 0 16px 0;
        text-align: center;
        font-size: 24px;
        font-weight: bold;
        color: rgba(#88875F, 0.7);
        letter-spacing: -2px;
        @include background(image-url("stitch.png") center 8px repeat-x);
        @include text-shadow(rgba(255,255,255,0.7) 0 1px, rgba(0,0,0,0.2) 0 -1px);
    }
}

.features {
    width: 100%;
    margin-top: 1em;
    padding-bottom: 0.5em;
    background: #E7E6CF image-url("fabric.png");
    @include border-radius(3px);
    @include box-shadow(rgba(0,0,0,0.5) 0 1px 2px);
    
    &, a {
        color: #88875F;
    }
    
    li {
        margin: 0 1em;
        position: relative;
        
        &:last-child {
            border-bottom: 0;
        }
        
        .title {
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            display: block;
            padding: 0.5em 64px 0.5em 0;
        }
    }
    
    .support {
        text-align: right;
        color: #FFF;
        color: rgba(255,255,255,0.8);
        position: absolute;
        top: 0.6em;
        right: 0;
        display: block;
        padding: 4px 6px;
        @include border-radius(12px);
        text-transform: uppercase;
        font-size: 12px;
        font-weight: bold;
        @include box-shadow(rgba(0,0,0,0.2) 0 1px inset, rgba(255,255,255,0.8) 0 -1px inset);
    }
    
    .support-yes > .support {
        background-color: $green;
        background-color: rgba($green,0.9);
    }
    
    .support-no > .support {
        background-color: $red;
        background-color: rgba($red,0.9);
    }
    
    .support-maybe > .support {
        background-color: $yellow;
        background-color: rgba($yellow,0.9);
    }
}

.subfeatures {
    margin-bottom: 0.5em;
    
    li {
        font-size: 80%;
        border: 0;
        margin-right: 0;
        
        .support {
            top: 0.5em;
        }
    }
}

footer {
    @include background(image-url("double-stitch.png") top center repeat-x);
    font-size: 12px;
    clear: both;
    text-align: center;
    line-height: 1.4;
    padding-top: 48px;
    margin: 16px -48px 0 -48px;
    
    a {
        color: $dark-green;
        text-decoration: none;
    }
}

#useragent {
    margin-bottom: 1em;
}

#social {
    margin-top: 1em;
}

#github-ribbon {
    position: absolute;
    top: 0;
    right: 0;
    border: 0;
}

